Refactoring tests from Costumer, Factory and build tests for Category.